View Issue Details

IDProjectCategoryView StatusLast Update
0027817Open CASCADEOCCT:Visualizationpublic2016-12-09 16:39
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.1.0 
Target Version7.1.0Fixed in Version7.1.0 
Summary0027817: Visualization, StdSelect_BRepOwner - copy transformation persistence flag
DescriptionStdSelect_BRepOwner does not copy transformation persistence flag for created presentation leading to highlighting artifacts within local selection.
Steps To Reproduce
pload MODELING VISUALIZATION
vclear
vinit View1
vtrih t
vdisplay -trsfPers trihedron -trsfPersPos -1 -1 40 t
box b 30 40 50
vdisplay -trsfPers trihedron -trsfPersPos -1 -1 40 -dispMode 1 b
vselmode b 4 1
vmoveto 50 350
if { [vreadpixel 50 350 rgb name] != "DARKTURQUOISE" } { puts "Error: face is not highlighted" }
TagsNo tags attached.
Test case numberbugs vis bug27817

Attached Files

  • trsfpers_face_KO.png (1,955 bytes)
  • trsfpers_face_OK.png (1,958 bytes)

Relationships

related to 0027860 closedkgv Open CASCADE Visualization - clean up Transformation Persistence API 

Activities

kgv

2016-08-28 19:20

developer  

trsfpers_face_KO.png (1,955 bytes)

kgv

2016-08-28 19:20

developer  

trsfpers_face_OK.png (1,958 bytes)

git

2016-08-28 19:25

administrator   ~0057236

Branch CR27817 has been created by kgv.

SHA-1: ecfcdde32536a243dd1029ed1dfebca4799e90d6


Detailed log of new commits:

Author: kgv
Date: Sun Aug 28 19:21:13 2016 +0300

    0027817: Visualization, StdSelect_BRepOwner - copy transformation persistence flag

kgv

2016-08-28 19:26

developer   ~0057237

Patch is ready for review.

apl

2016-08-30 18:08

developer   ~0057303

Dear bugmaster,

Please test the patch.

apv

2016-08-31 14:01

tester   ~0057331

Dear BugMaster,

Branch CR27817 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: ecfcdde32536a243dd1029ed1dfebca4799e90d6

Number of compiler warnings:
occt component:
   Linux: 0 (0 on master)
   Windows: 0 (0 on master)
   MasOS: 0 (0 on master)
products component:
   Linux: 64
   Windows: 0
   MacOS: 1133

Regressions/Differences:
Not detected

Testing cases:
bugs vis bug27817 - FAILED
http://occt-tests/CR27817-master-OCCT/Debian70-64/bugs/vis/bug27817.html
http://occt-tests/CR27817-master-OCCT/Windows-64-VC10/bugs/vis/bug27817.html

Testing on Linux:
Total MEMORY difference: 90073805 / 89930812 [+0.16%]
Total CPU difference: 19304.429999999982 / 19309.479999999934 [-0.03%]

Testing on Windows:
Total MEMORY difference: 57089032 / 57107084 [-0.03%]
Total CPU difference: 17993.34254119884 / 18053.73052829886 [-0.33%]

apv

2016-08-31 14:02

tester   ~0057332

Dear Kirill,

Branch CR27817 has been rejected due to:
- failed test-case for issue

git

2016-08-31 14:07

administrator   ~0057333

Branch CR27817 has been updated forcibly by kgv.

SHA-1: 3d3ee085831c9a1fc8a9ee47335c8e2c9ef4f4b8

kgv

2016-08-31 14:07

developer   ~0057334

The erroneous short syntax of vtrihedron command has been corrected in test case - please re-check this test case.

apv

2016-08-31 15:28

tester   ~0057345

Testing cases:
bugs vis bug27817 - OK
http://occt-tests/CR27817-master-OCCT/Debian70-64/bugs/vis/bug27817.html
http://occt-tests/CR27817-master-OCCT/Windows-64-VC10/bugs/vis/bug27817.html

git

2016-10-28 21:48

administrator   ~0059573

Branch CR27817 has been deleted by kgv.

SHA-1: 3d3ee085831c9a1fc8a9ee47335c8e2c9ef4f4b8

Related Changesets

occt: master e7879c57

2016-08-28 16:21:13

kgv


Committer: bugmaster Details Diff
0027817: Visualization, StdSelect_BRepOwner - copy transformation persistence flag Affected Issues
0027817
mod - src/StdSelect/StdSelect_BRepOwner.cxx Diff File
add - tests/bugs/vis/bug27817 Diff File

Issue History

Date Modified Username Field Change
2016-08-28 19:17 kgv New Issue
2016-08-28 19:17 kgv Assigned To => kgv
2016-08-28 19:20 kgv File Added: trsfpers_face_KO.png
2016-08-28 19:20 kgv File Added: trsfpers_face_OK.png
2016-08-28 19:21 kgv Summary Visualization - StdSelect_BRepOwner does not copy transformation persistence flag => Visualization, StdSelect_BRepOwner - copy transformation persistence flag
2016-08-28 19:25 git Note Added: 0057236
2016-08-28 19:26 kgv Note Added: 0057237
2016-08-28 19:26 kgv Assigned To kgv => san
2016-08-28 19:26 kgv Status new => resolved
2016-08-28 19:26 kgv Product Version => 7.1.0
2016-08-30 16:20 kgv Assigned To san => apl
2016-08-30 18:08 apl Note Added: 0057303
2016-08-30 18:08 apl Assigned To apl => bugmaster
2016-08-30 18:08 apl Status resolved => reviewed
2016-08-30 18:15 apv Assigned To bugmaster => apv
2016-08-31 13:43 apv Test case number => bugs vis bug27817
2016-08-31 14:01 apv Note Added: 0057331
2016-08-31 14:01 apv Assigned To apv => kgv
2016-08-31 14:01 apv Status reviewed => assigned
2016-08-31 14:02 apv Note Added: 0057332
2016-08-31 14:07 git Note Added: 0057333
2016-08-31 14:07 kgv Note Added: 0057334
2016-08-31 14:07 kgv Assigned To kgv => bugmaster
2016-08-31 14:07 kgv Status assigned => resolved
2016-08-31 14:08 kgv Status resolved => reviewed
2016-08-31 14:36 apv Assigned To bugmaster => apv
2016-08-31 15:28 apv Note Added: 0057345
2016-08-31 15:28 apv Assigned To apv => bugmaster
2016-08-31 15:28 apv Status reviewed => tested
2016-09-02 10:27 bugmaster Changeset attached => occt master e7879c57
2016-09-02 10:27 bugmaster Status tested => verified
2016-09-02 10:27 bugmaster Resolution open => fixed
2016-09-10 14:35 kgv Relationship added related to 0027860
2016-10-28 21:48 git Note Added: 0059573
2016-12-09 16:30 aiv Status verified => closed
2016-12-09 16:39 aiv Fixed in Version => 7.1.0