0027817: Visualization, StdSelect_BRepOwner - copy transformation persistence flag